add challengeUser entity, icons, avatars and fix some bugs