@@ -1,21 +1,22 @@
 package com.habit_tracker.backend.challenge.service.impl;
 
-import com.habit_tracker.backend.challenge.dto.ChallengeDto;
-import com.habit_tracker.backend.challenge.dto.ChallengeLibraryDto;
-import com.habit_tracker.backend.challenge.dto.CreateChallengeRequest;
-import com.habit_tracker.backend.challenge.dto.InviteUsersRequest;
+import com.habit_tracker.backend.challenge.dto.*;
 import com.habit_tracker.backend.challenge.entity.Challenge;
 import com.habit_tracker.backend.challenge.entity.ChallengeLibrary;
 import com.habit_tracker.backend.challenge.entity.ChallengeStatus;
 import com.habit_tracker.backend.challenge.repository.ChallengeLibraryRepository;
 import com.habit_tracker.backend.challenge.repository.ChallengeRepository;
 import com.habit_tracker.backend.challenge.service.ChallengeService;
+import com.habit_tracker.backend.challenge_user.entity.ChallengeUser;
+import com.habit_tracker.backend.challenge_user.repository.ChallengeUserRepository;
 import com.habit_tracker.backend.user.entity.User;
 import com.habit_tracker.backend.user.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
+import org.springframework.aop.scope.ScopedProxyUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -26,13 +27,15 @@ public class ChallengeServiceImpl implements ChallengeService {
   private final ChallengeRepository challengeRepository;
   private final ChallengeLibraryRepository challengeLibraryRepository;
   private final UserRepository userRepository;
+  private final ChallengeUserRepository challengeUserRepository;
 
   public ChallengeServiceImpl(ChallengeRepository challengeRepository,
                               ChallengeLibraryRepository challengeLibraryRepository,
-                              UserRepository userRepository) {
+                              UserRepository userRepository, ChallengeUserRepository challengeUserRepository) {
     this.challengeRepository = challengeRepository;
     this.challengeLibraryRepository = challengeLibraryRepository;
     this.userRepository = userRepository;
+    this.challengeUserRepository = challengeUserRepository;
   }
 
   @Override
@@ -60,6 +63,7 @@ public class ChallengeServiceImpl implements ChallengeService {
     challenge.setPushOn(request.isPushOn());
     challenge.setStatus(ChallengeStatus.ACTIVE);
     challenge.setCreatedBy(creator);
+    challenge.setIcon(request.getIcon());
 
     if (request.getTemplateId() != null) {
       ChallengeLibrary template = challengeLibraryRepository.findById(request.getTemplateId())
@@ -79,8 +83,13 @@ public class ChallengeServiceImpl implements ChallengeService {
     }
 
     challenge.setParticipants(participants);
-
     Challenge saved = challengeRepository.save(challenge);
+//    for (User participant : participants) {
+//      ChallengeUser cu = new ChallengeUser();
+//      cu.setChallenge(saved);
+//      cu.setUser(participant);
+//      challengeUserRepository.save(cu);
+//    }
     return toDto(saved);
   }
 
@@ -101,17 +110,45 @@ public class ChallengeServiceImpl implements ChallengeService {
       throw new IllegalStateException("Challenge is not active");
     }
 
-    if (challenge.getCurrentProgress() < challenge.getAim()) {
-      challenge.setCurrentProgress(challenge.getCurrentProgress() + 1);
+    ChallengeUser cu = challengeUserRepository
+        .findByChallengeIdAndUserId(challengeId, currentUserId)
+        .orElseThrow(() -> new EntityNotFoundException(
+            "ChallengeUser not found for challenge " + challengeId + " and user " + currentUserId
+        ));
+
+    if (cu.getStatus() == ChallengeStatus.COMPLETED) {
+      return toDto(challenge);
     }
 
-    if (challenge.getCurrentProgress() >= challenge.getAim()) {
+    if (cu.getProgressDays() < challenge.getAim()) {
+      cu.setProgressDays(cu.getProgressDays() + 1);
+      cu.setLastCheckDate(LocalDate.now());
+      User u = cu.getUser();
+      u.setScore(u.getScore() + 10);
+
+      if (cu.getProgressDays() >= challenge.getAim()) {
+        cu.setStatus(ChallengeStatus.COMPLETED);
+      }
+      challengeUserRepository.save(cu);
+    }
+
+    int maxProgress = challengeUserRepository.findByChallengeId(challengeId).stream()
+        .mapToInt(ChallengeUser::getProgressDays)
+        .max()
+        .orElse(0);
+    challenge.setCurrentProgress(maxProgress);
+
+    boolean allCompleted = challengeUserRepository.findByChallengeId(challengeId).stream()
+        .allMatch(cuItem -> cuItem.getStatus() == ChallengeStatus.COMPLETED);
+
+    if (allCompleted) {
       challenge.setStatus(ChallengeStatus.COMPLETED);
     }
 
     Challenge saved = challengeRepository.save(challenge);
     return toDto(saved);
   }
+
 
   @Override
   public ChallengeDto completeChallenge(UUID currentUserId, UUID challengeId) {
@@ -149,12 +186,29 @@ public class ChallengeServiceImpl implements ChallengeService {
 
     for (User u : opponents) {
       challenge.addParticipant(u);
+//      ChallengeUser cu = new ChallengeUser();
+//      cu.setChallenge(challenge);
+//      cu.setUser(u);
+//      challengeUserRepository.save(cu);
     }
 
     Challenge saved = challengeRepository.save(challenge);
     return toDto(saved);
   }
 
+  public ChallengeDto getChallenge(UUID challengeId, UUID currentUserId) {
+    Challenge challenge = challengeRepository.findById(challengeId)
+        .orElseThrow(() -> new EntityNotFoundException("Challenge not found: " + challengeId));
+
+    boolean isParticipant = challenge.getParticipants().stream()
+        .anyMatch(u -> u.getId().equals(currentUserId));
+
+    if (!isParticipant) {
+      throw new IllegalStateException("User is not a participant of this challenge");
+    }
+
+    return toDto(challenge);
+  }
   private Challenge getChallengeForUser(UUID challengeId, UUID currentUserId) {
     Challenge challenge = challengeRepository.findById(challengeId)
         .orElseThrow(() -> new EntityNotFoundException("Challenge not found: " + challengeId));
@@ -182,9 +236,23 @@ public class ChallengeServiceImpl implements ChallengeService {
   private ChallengeDto toDto(Challenge challenge) {
     UUID templateId = challenge.getTemplate() != null ? challenge.getTemplate().getId() : null;
     UUID creatorId = challenge.getCreatedBy() != null ? challenge.getCreatedBy().getId() : null;
-    List<UUID> participantIds = challenge.getParticipants().stream()
-        .map(User::getId)
-        .collect(Collectors.toList());
+    List<ChallengeUser> challengeUsers = challengeUserRepository.findByChallengeId(challenge.getId());
+
+    List<ChallengeParticipantDto> participants = challengeUsers.stream()
+        .map(cu -> new ChallengeParticipantDto(
+            cu.getUser().getId(),
+            cu.getUser().getEmail(),
+            cu.getUser().getUsername(),
+            cu.getProgressDays(),
+            cu.getStatus(),
+            cu.getLastCheckDate() != null && cu.getLastCheckDate().isEqual(LocalDate.now())
+        ))
+        .toList();
+
+    for (ChallengeParticipantDto p: participants) {
+      System.out.println(p.getUsername());
+      System.out.println(p.getProgressDays());
+    }
 
     return new ChallengeDto(
         challenge.getId(),
@@ -199,7 +267,8 @@ public class ChallengeServiceImpl implements ChallengeService {
         challenge.isPushOn(),
         templateId,
         creatorId,
-        participantIds
+        participants,
+        challenge.getIcon()
     );
   }
 }
